fixed lack of gap in panel headers

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
   --fontSize: 14px;
   --status-margin: 0.75em;
   --navbar-height: var(--navbarSize, 3.5rem);
+  --panel-header-height: var(--panelHeaderSize, 3.2rem);
   --post-line-height: 1.4;
   // Z-Index stuff
   --ZI_media_modal: 9000;
