--- a/src/panel.scss
+++ b/src/panel.scss
@@ -60,9 +60,9 @@
 
 .panel-heading,
 .panel-footer {
-  --panel-heading-height-padding: calc(var(--panelHeaderSize, 3.2rem) * 0.2);
-  --__panel-heading-gap: calc(var(--panelHeaderSize) * 0.1564);
-  --__panel-heading-height: var(--panelHeaderSize, 3.2em);
+  --panel-heading-height-padding: calc(var(--panel-header-height) * 0.2);
+  --__panel-heading-gap: calc(var(--panel-header-height) * 0.1565);
+  --__panel-heading-height: var(--panel-header-height);
   --__panel-heading-height-inner: calc(var(--__panel-heading-height) - 2 * var(--panel-heading-height-padding, 0));
 
   font-size: calc(var(--panelHeaderSize) / 3.2);
